--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-grizzly2-servlet</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>2.1.1</version>
+        </dependency>
 
          <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
